export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_18",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "array_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [
        "secret1",
        "secret2",
        "secret3"
      ],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_ca4c84007bbe1e2253363df3d2da8605fc21e36c4c280cbb335b7daf5ce0dc73",
          "fn": "(lambda x: (x['first'] + x['second']))"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      },
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1Y727bNhD3Zz0FoX6ROlW1ZScbvKnY1nZdgRYL2mwYEAQCLdG2UEnUKGqxZ/hN9jZ7sd2Rsv7ZTtqtDdbBB9gieeTxeDz+eLyQp3nCVm6+HnwyGgKdTybqC9T/jseTLwej4eR8NPSG3hjbRyPPg+/gHqgsJBWEDP4t9Rf3mdAD8pTnaxEvlpK8ZpLKdc7IT3/96ZAkDllWsIiUWcQEkUtGXvM/4iSh5KKcAZe80j3IL0wUMc+I5w5d4wF5e/Hs10cV79HLiGUynsdMTMnri1ePoI9hzAVPCc60EDRfBhlbSRKnOReSSKdhHOrnqqKbU0HTYjfou1IuHViIKBzyhkp2y8C6cTf2xdGZcg6LXO/6XajawY6ihCWmrHBhrXzX/xmU32iGYRQ8ZZdoWZ9It5CiDKVlEKCN+kcyecbMKbCpEHRtSTfOJFswYdkOSePMHzskoynzzcsbbtpOM05CHcfxXMIm0ASG5oKv1pb5tprVtKv+W/3RcmquY9iGEWocuEtJGgAjzhZqRl202srQYJ5wKhVblSzUfeQOYRFlImOYI+BzH7ygMyoLWFamahQWrCtlDUcv7rrXtTJMM2RnKWxggqIZ/KuRQ7xrh4Q8m8cLf2O+Y2vobP5Ok5KZ2wM6N/K04l1p7hnIc8+6ugTaSjtjoME21QyNHLszWcYKyaLORrMYzpawrloGbS3KvrbtZm/3RQU3MDwQbA4yd27WM21K40TbFkvWIWd42my/9gfj29rJtRMULBRMFv6VqUsj3B5d9Jri2LzWYkM4jD6eSKvWhSYJvwmgl4IEmhT+D/DXUlZ3WDIKeAMTXfc5KZNLHqEKL55fmntsDigGznZlPmzz2CrnBTsoNaWrgC5YAKr7I2+oGZV1KEAK9EZkcWe0iEPwSQkG/x7L2IpuqYDHXaY09M7OLcX/ESqKbVcTgQcxH0GpMcRNnEWgL057PnT6zUmcxhL0+arh/FYysa4YreaEhzQJ2CpkReGfNe3g8xJwKYhr7PXNsmDCrFdoGxGbE9Q3qA5+gNtdWIupBkR7qroqQPPbWGbZipGXM2jXmOjm6joAjmItXG3yZr04j4+i3HmZhU271rV2PKfDkO6M84TRrO3zekQEDmvZxH9C4Mwxs2HbrjoMGrgtUKsaahuDEx2mGpXrS+zjR4J3xH+jM4j5evHfeOx5p/jvHug9QzHno8ZJ+RqAPKtHqNouVvpnAVb7umqB25539wFOQ9cBKLsd/bT+flf14wBIo8iXB8CvG2a1abPXgmTOY1G0g6seNNb94GrhWXR7x22nxe6j78FxeuEu7lGQ0HQWUUt/yGpKVleVftfkC6xUSrRDpj2Ahm+LXW3X+thl0Yqy9i1xaNXb91tWdaVsiJLqEC2IbNUdo9rIw6rRfK/FfD4XThGKOJfFY7kUjLmyGHwCugP/AfnHffz3xpPRCf/vgR4//pAEwPOEFrL18lcvfhBx9MlfDdDPfnzSiDkNGblEb3uZ5aVUSDebEnhszZj4Giq0qWwNA6EUwB6xAJ9ARPkposKGUIfMyHbaEoaHbwMtm10IPCVv4NSK6Bv9snJgKe8yfpM9wdePPVWT0/bkLU22igtvmlJk9Wyo0+D/REWM8fcnTf/dGf+dn+/n/4aTs9P5vwf6L+f/nCoquy34vDs0pCqfVadTIBk3ame4NiaFiAFOtznrJJNU3sqDCMIwZh0JmuFg9sCfjIGNT+uuxDjqiMLYBAJCHa5ApsYyL7Bmb3cpvZ/xcQ6SsNOdkjAzwUUjSw+uZWnRRyPiD37mHw+PFZxDUqph71qOR8KQ1msFdwUk6WZO50U/8sxuXLWT2QrZICnYEoLmdwiarpaETUoahHRxNCW4XWqXtnZPeicMVDIrhgmVNea1tFpzzFSZtnEgXFY3ktZHu1+g1oU/vSOqA4hKeVQmUO+HXLeppA3en/aUzzjRiU70Eehv7ULwjQAeAAA="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_18",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "array_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [
        "secret1",
        "secret2",
        "secret3"
      ],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      },
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+0Y7W7bNtC//RSE/lTuFMeSnWDQ1mJdW6wFOiRoMmBAYBi0RDtC9TWKmm0YepO9zV5sd0fqw06WZOgSrJ0PhkUd74tH3vF0QZbksVgPVdF7NBgBnE4m9ATYf47H40nPHU1O3ZE38saId13P9Xqj3hNAWSguGet9Luwv7guB42P2Oss3MlpeK/azUFxtcsHO/vzDYXEUiLQQISvTUEimrgV7G/NCRQH7oKeYNxwN+yDi4vzNr0cGefQ+FKmKFpGQfs1wBIR9JLw8e3PmsxJYoyTPpGIJz/tmuGXnGejcOEzBD8xYSp5fs4otZJYw64cGdQwKsuNCBsdJFsLJtb5rRbyBqY8l6E/EnZxS0xSE2ZPxqlR3q8255EmhufpBlhaKFVkiLtF1L5gaFkqWgbK3fcayVPiA4VLyja2GUarEUkh74ICeJEp9NmYVjlOeAKF1ucosVg0c4FSrDDmzXEVZymNgzmW23tjWhVFlDYCuy9xMgITGsEAH+G228Rm8ROnS12gY2aSZzxZxxhWiaWAbU12HJWWsIpB3tvCZZwzl6UykZYLk+JzZVxas2nKYBUuwpjWNWXpDW7tiyxAjJMd1+uwKtHhTcgrwMbA/XURg4pZ9EhtY5O88LnGFKLXqmtsIrm3eEzs8AcHDk2nDpT3hd3zCSHgrY2BoU1EoEXb3UUQQDtK+6jius6TBdDBoN64jYrYCvpkU4L36wNQeTHgUkwtxYO/t7Ot2E83mNqfSBn7tKUOrQNOR2fUjJCssh+YLEUihCvCFpYcu7pEeeu1wbE01PbgO5GnZjK2iNMxWFyLw2enI2UF+iJII/Oh639b430ohNwbdIOMs4PHbdSAKsOGkxsL+KrFW3aRhQX6QxujKMadAFq0tPI6z1WspiIfHMLOAf+F0p98JDlkLVzvdwUOOu85C8sJPby+t3ckzyIN40q+s5+2MWOdZIW6Rl/D1q6Ugl7jeaMdeDikEaQ0lZpThnBdRAMGBG/QjjhFr4qMhuk544J2c2kT1Dl6IyNCQZtJgLwfsxcs2RCDQMTtBhKdi1U2CNhyWliYv50Ci0+wQXuCJBESxHOqF2rWX0QKfxA4XZRrYBs26KcVpkGo4z7JY8NQetMhtM0KuEI+nTYZDwAnL6cyKxUJgMG6Z4hDtVoopBJIwLyA6Ni1lVQ8HQ4wlvRQblmK0VrReoIJn7wD3Qp3QZ/WF+AiV4D31n3viefv133jsuYf67wngKeu//1qdd76BqyD9R1JyYjGVX3sH60u3jqWjmhwu1U6ivjMFPySLGwFkgqHZWYJJ5XuJnIdUuXRTeKfisRaRLJTVqXl0IZCloXWzENLMNaFBGJ+g9z7wZB5y24rpydY+W189Iw3PpuwbfNGin03rK+1v0rhx5eaW++ffNX7b3EtbEuYwzV/RthGKPTc4q759bjUab57qi7t1ikBGuSqO1bUU4pG6APfkf8j84/38740nh/z/FPCk+R8qfbnggWCXeNrep3mpKDPOfQbfanMhMcvx9qXq9zGVQbLGBICfU4zOKX3zMO6wOav8jjAMw23lU1DTV4XPPkLkyvB7/ZXmwFI+pdkqfUkVov6g4F3lHUsqmoUPolKmjTa0qfc1QRFhLf+o7b/74t+DcL/R/xt5k0P8PwH8D+s/0xjj1A5rWjZtJ8/d6ZNR4O/2q3QzDNtf3UbbfEdeQ+Vgm8Bnk3GXFhsc+924KOxqoZICqjjqT5nG3zm8WnudoV+wVdIVjTwPEI0NikxSK1buSiQt+00mXeCabtLNovYBVevdZS9dDdAsa2lqzO1FLbVV29KwgKbh3GnaDTutBterW0k7ZVst31SC1G1tBZJbyJc3peIcSYZNRs/iHtOGVoNbNZHUXI8teNlgr03bRm0r6uOSDXiRGSv0Qa9rXljfjVGzYcQGMiFIyhgR+zXd11i3HuAABzjAAT4P/gLoXEMSACAAAA=="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;
